feat: partially convert to new KMP layout